# typr

./: .gitignore  .gitmodules  .repl.R  Cargo.toml  IMPROVEMENTS_README.md  LSP_DIAGNOSTICS.md  LSP_DIAGNOSTICS_V2.md  LSP_FIX_V3.md  README.md  access.md  add_syntax_error.md  add_type_error.md  adt.pl  app.R  app.ty  arithmétique_de_type.md  array_dataframe.md  audit_type_checking.md  b_generic_functions.R  bug.md  bugs.md  build-wasm.sh  c_constructor.md  c_types.R  catnl.R  changes.md  check.txt  clippy.toml  constructeur_union.md  context.json  debug.md  debug.nu  delivery.nu  deploy.nu  deploy.sh  doc.md  errors.md  external_packages_incompatibilities.md  factor_type.md  fix.md  (+67 more)
crates/typr-cli/: Cargo.toml  README.md
crates/typr-cli/configs/: .gitignore  .gitkeep  DESCRIPTION  NAMESPACE  main.ty  rproj.Rproj  test-basic.R
crates/typr-cli/configs/src/: data.toml  functions_R.txt  load_module.R  r_name_db.json  std.R
crates/typr-cli/configs/std/: default.ty  factor.ty  foreign.ty  lin_alg.ty  option.ty  state.ty  std_JS.ty  std_R.ty  system.ty
crates/typr-cli/src/: cache.rs  cases.rs  cli.rs  engine.rs  fs_provider.rs  fuzz.rs  io.rs  lib.rs  lsp.rs  lsp_parser.rs  main.rs  metaprogramming.rs  progress.rs  project.rs  r_name_lint.rs  rd_renderer.rs  repl.rs  standard_library.rs  vignette_renderer.rs
crates/typr-cli/tests/: incremental_builds.rs  r_name_lint.rs
crates/typr-core/: Cargo.toml
crates/typr-core/R/: MyModule.R
crates/typr-core/configs/: .Rbuildignore  .gitignore  .gitkeep2  instructions.md  main.ty  package_structure.md  testthat.R
crates/typr-core/configs/src/: functions_JS.txt  std.R
crates/typr-core/configs/std/: system.ty  test.ty
crates/typr-core/src/: abstractions.rs  lib.rs
crates/typr-core/src/components/context/: config.rs  fingerprint.rs  graph.rs  mod.rs  vartype.rs
crates/typr-core/src/components/error_message/: help_data.rs  help_message.rs  locatable.rs  message_template.rs  mod.rs  syntax_error.rs  type_error.rs  typr_error.rs
crates/typr-core/src/components/language/: argument_value.rs  array_lang.rs  function_lang.rs  mod.rs  module_lang.rs  operators.rs  use_lang.rs  var.rs  var_function.rs
crates/typr-core/src/components/type/: alias_type.rs  argument_type.rs  array_type.rs  function_type.rs  generic.rs  index.rs  intersection_type.rs  js_types.rs  kind.rs  mod.rs  module_type.rs  tbool.rs  tchar.rs  tint.rs  tnumber.rs  type_category.rs  type_operator.rs  type_printer.rs  type_system.rs  typer.rs  union_type.rs  vector_type.rs
crates/typr-core/src/processes/: mod.rs
crates/typr-core/src/processes/parsing/: elements.rs  indexation.rs  lang_token.rs  mod.rs  operation_priority.rs  type_token.rs  types.rs  vector_priority.rs
crates/typr-core/src/processes/spg/: builder.rs  doc_attach.rs  edges.rs  mod.rs  model.rs
crates/typr-core/src/processes/transpiling/: checked_assertions.rs  mod.rs  (+1 more)
crates/typr-core/src/utils/: builder.rs  fluent_parser.rs  mod.rs  path.rs  program_gen.rs  standard_library.rs
crates/typr-core/tests/: .snapshot_tests.rs.pending-snap  edge_case_matrix.rs  generative.rs  snapshot_tests.rs
crates/typr-core/tests/snapshots/: snapshot_tests__array_unification__array_param_dispatches_on_implicit_class.snap  snapshot_tests__array_unification__atomic_array_alias_gets_atomic_pipeline.snap  snapshot_tests__array_unification__int_array_literal_is_bare_atomic.snap  snapshot_tests__array_unification__native_op_on_int_array_is_called_directly.snap  snapshot_tests__array_unification__record_array_literal_stays_typed_vec.snap  snapshot_tests__array_unification__user_fn_on_int_array_becomes_typed_vapply.snap  snapshot_tests__array_unification__vectorizable_user_fn_on_int_array_is_called_directly.snap  snapshot_tests__checked_mode__function_params_and_return.snap  snapshot_tests__checked_mode__typed_let_and_constructor_call.snap  snapshot_tests__checked_mode__unannotated_let_is_not_instrumented.snap  snapshot_tests__diagnostics__c1_unmatching_return_type.snap  snapshot_tests__diagnostics__c2_loop_control_outside_loop.snap  snapshot_tests__diagnostics__d1_dataframe_column_length_mismatch.snap  snapshot_tests__diagnostics__d1_dataframe_column_not_vector.snap  snapshot_tests__diagnostics__g3_alias_arity_mismatch.snap  snapshot_tests__diagnostics__m1_non_exhaustive_match.snap  snapshot_tests__diagnostics__m3_unsupported_pattern.snap  snapshot_tests__diagnostics__m4_pattern_type_mismatch_unknown_variant.snap  snapshot_tests__diagnostics__s1_undefined_variable.snap  snapshot_tests__spg__function_and_record_alias.snap  snapshot_tests__spg__union_alias.snap  snapshot_tests__transpilation__boolean_literal.snap  snapshot_tests__transpilation__constructor_call_spread.snap  snapshot_tests__transpilation__integer_literal.snap  snapshot_tests__transpilation__module_and_use.snap  snapshot_tests__transpilation__number_literal.snap  snapshot_tests__transpilation__opaque_alias.snap  snapshot_tests__transpilation__opaque_state_alias.snap  snapshot_tests__transpilation__pipe_operator.snap  snapshot_tests__transpilation__simple_function.snap  snapshot_tests__transpilation__simple_let.snap  snapshot_tests__transpilation__state_aliasing_is_plain_assignment.snap  snapshot_tests__transpilation__string_literal.snap  snapshot_tests__transpilation__string_literal_single_quoted_source.snap  snapshot_tests__transpilation__string_literal_with_double_quotes.snap  snapshot_tests__transpilation__tuple_literal_carries_alias_class_for_dispatch.snap  snapshot_tests__transpilation__type_alias_dataframe.snap  snapshot_tests__transpilation__type_alias_dataframe_sized.snap  snapshot_tests__transpilation__type_alias_record.snap  snapshot_tests__transpilation__type_alias_vector.snap  (+14 more)
crates/typr-lsp/: Cargo.toml
crates/typr-lsp/src/: lib.rs  lsp.rs  lsp_parser.rs  metaprogramming.rs
crates/typr-lsp/src/handlers/: code_actions.rs  completions.rs  document.rs  goto_definition.rs  hover.rs  inlay_hints.rs  mod.rs  rename.rs  semantic_tokens.rs  signature_help.rs  utils.rs
crates/typr-wasm/: Cargo.toml
crates/typr-wasm/src/: lib.rs
(+718 files in other folders)
