[package]
name = "typr"
description = "A superset of the legendary R"
keywords = ["R", "type-checker", "language", "transpiler"] 
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Use typr-cli for all CLI functionality
typr-cli.workspace = true
