[workspace]
resolver = "2"
version = "0.4.20"
    ".",
    "crates/typr-core",
    "crates/typr-cli",
    "crates/typr-wasm",
]

[package]
name = "typr"
description = "A typed superset of R - transpiler and type checker"
keywords = ["R", "type-checker", "language", "transpiler"]
categories = ["compilers", "development-tools"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typr"
path = "src/main.rs"

[dependencies]
typr-cli.workspace = true

[dev-dependencies]
typr-core.workspace = true

[workspace.package]
version = "0.4.19"
edition = "2021"
authors = ["Fabrice Hategekimana <fab.hatege15@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fabriceHategekimana/typr"

[workspace.dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.12"
miette = { version = "7.6.0", features = ["fancy"] }
rpds = "1.1.1"
indexmap = { version = "2.13.0", features = ["serde"] }
tap = "1.0.1"
rand = "0.10.0"
anyhow = "1.0.100"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
lsp-types = "0.94"
rustyline = "17.0.2"
syntect = "5.3.0"
bincode = "1.3"
extendr-api = "0.8.1"

typr-core = { path = "crates/typr-core" }
typr-cli = { path = "crates/typr-cli" }
typr-wasm = { path = "crates/typr-wasm" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
