[package]
name = "typr-cli"
description = "Command-line interface, REPL, and LSP server for TypR - a typed superset of R"
keywords = ["R", "type-checker", "cli", "lsp", "repl"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typr"
path = "src/main.rs"

[lib]
name = "typr_cli"
path = "src/lib.rs"

[dependencies]
# Use typr-core for core logic
typr-core.workspace = true

# Pure dependencies (needed for parsing/type manipulation)
nom.workspace = true
nom_locate.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
rpds.workspace = true
indexmap.workspace = true
tap.workspace = true
rand.workspace = true
anyhow.workspace = true

# CLI/System dependencies (NOT WASM-compatible)
clap.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
rustyline.workspace = true
syntect.workspace = true
bincode.workspace = true
