[package]
name = "typr-core"
description = "Core type checking and transpilation logic for TypR - a typed superset of R"
keywords = ["R", "type-checker", "language", "transpiler", "wasm"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom.workspace = true
nom_locate.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
rpds.workspace = true
indexmap.workspace = true
tap.workspace = true
rand.workspace = true
anyhow.workspace = true
countmap.workspace = true
bincode = "1.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
# Self-dependency so integration tests under tests/ (compiled as separate
# crates against the normal rlib) can see the `fuzz-gen`-gated program_gen
# module. Plain `#[cfg(test)]` only covers typr-core's own unit tests.
typr-core = { path = ".", features = ["fuzz-gen"] }

# For WASM random number generation (getrandom 0.4 uses wasm_js feature)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = []
# Kept for compatibility (typr-wasm still requests it) but no longer gates
# anything: filesystem operations are disabled via `target_arch = "wasm32"`
# instead. Gating on a feature broke native `cargo build --workspace`
# binaries — feature unification with typr-wasm enabled it workspace-wide,
# silently turning module-file writes into no-ops.
wasm = []
# Exposes utils::program_gen (Phase B type-directed generator) to integration
# tests (tests/generative.rs, via the self-dependency below) and to typr-cli's
# `typr fuzz` (Stage 2, crates/typr-cli/src/fuzz.rs), which depends on this
# crate with the feature enabled normally.
fuzz-gen = []
