[package]
name = "typr-wasm"
description = "WebAssembly bindings for TypR - compile and type-check TypR code in the browser"
keywords = ["R", "type-checker", "wasm", "webassembly", "playground"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
typr-core = { workspace = true, features = ["wasm"] }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
